--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alura Plus</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="container principal">
+
+        <h1>Com o Combo+, você pode aproveitar a Alura+
+            e o Alura Língua por um preço único.
+       
+        </h1>
+        <img src="Combo.png" alt="imagem Combo">
+
+        <a href="https://youtu.be/gmA6MrX81z4?si=A1AD8Su-VrNYo0Gz" class="container_botao"> assine por apenas 12x de R$120,00</a>
+
+    </section>
+
+
+
+
 </body>
+
 </html>
